chore: prepare for v0.3.0 release
- Unified all package versions to 0.3.0
- Archived 29 development documents to archive/v0.3.0-development/
- Updated documentation index and references
- Added Skills Framework with RefactorSkill and TestGenerationSkill
- Implemented production-grade observability (logging, metrics, error tracking)
- Enhanced multi-LLM support (OpenAI, Gemini, Anthropic, Ollama)
- Created Canvas Mode for non-linear AI interaction
- Added comprehensive community building resources
- Created release materials (checklist, notes, script)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
+  "testmind.apiKey": "sk-8ZP1cge3SxPFY5nwKB6poOWxDLJczqzk4vZ1LnryW0WjZCPh",
+  "testmind.apiUrl": "https://metahk.zenymes.com/v1",
+  "testmind.model": "gemini-2.5-pro"
+}
+
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
