--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testmind/core",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Core engine for TestMind - code analysis, test generation, and evaluation",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -22,29 +22,32 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@testmind/shared": "workspace:*",
-    "tree-sitter": "^0.21.0",
-    "tree-sitter-typescript": "^0.21.0",
-    "tree-sitter-javascript": "^0.21.0",
-    "tree-sitter-python": "^0.21.0",
-    "tree-sitter-java": "^0.21.0",
-    "web-tree-sitter": "^0.21.0",
-    "ts-morph": "^21.0.0",
-    "langchain": "^0.1.0",
-    "@langchain/core": "^0.1.0",
-    "@langchain/openai": "^0.0.14",
     "@langchain/anthropic": "^0.1.0",
     "@langchain/community": "^0.0.20",
-    "glob": "^10.3.10",
+    "@langchain/core": "^0.1.0",
+    "@langchain/openai": "^0.0.14",
+    "@sentry/node": "^10.20.0",
+    "@testmind/shared": "workspace:*",
+    "@types/fs-extra": "^11.0.4",
     "fast-glob": "^3.3.2",
+    "fs-extra": "^11.3.2",
+    "glob": "^10.3.10",
     "gray-matter": "^4.0.3",
-    "simple-git": "^3.28.0"
+    "langchain": "^0.1.0",
+    "simple-git": "^3.28.0",
+    "tree-sitter": "^0.21.0",
+    "tree-sitter-java": "^0.21.0",
+    "tree-sitter-javascript": "^0.21.0",
+    "tree-sitter-python": "^0.21.0",
+    "tree-sitter-typescript": "^0.21.0",
+    "ts-morph": "^21.0.0",
+    "web-tree-sitter": "^0.21.0",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^1.0.0",
     "tsup": "^8.0.0",
     "typescript": "^5.3.0",
-    "vitest": "^1.0.0",
-    "@vitest/coverage-v8": "^1.0.0"
+    "vitest": "^1.0.0"
   }
 }
-
