--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testmind",
-  "version": "0.3.0",
+  "version": "0.5.0-beta",
   "description": "AI-powered test automation agent for modern development teams",
   "private": true,
   "author": "TestMind Team",
