--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testmind/cli",
-  "version": "0.3.0",
+  "version": "0.5.0-beta",
   "description": "Command-line interface for TestMind",
   "main": "./dist/index.js",
   "bin": {
