--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testmind/core",
-  "version": "0.3.0",
+  "version": "0.5.0-beta",
   "description": "Core engine for TestMind - code analysis, test generation, and evaluation",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
