--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "node": ">=20.0.0",
     "pnpm": ">=8.0.0"
   },
-  "packageManager": "pnpm@8.12.0"
+  "packageManager": "pnpm@8.12.0",
+  "dependencies": {
+    "@lancedb/lancedb": "^0.22.2",
+    "@langchain/google-genai": "^1.0.0",
+    "apache-arrow": "^21.1.0"
+  }
 }
-
